# ksplayer4c

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: cmdutils.c  cmdutils.h  main.c
src/backup/: cmdutils.c  cmdutils.h  main.c
